--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,9 +2,10 @@ footer {
     background-color: white;
     height: 60px;
     width: 100%;
-    border-top: 1px #CCCCCC;
+    border-top: 1px solid #CCCCCC;
     position: absolute;
     bottom: 0;
+    
 }
 
 P {
