--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -3,7 +3,13 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
-    background-image: url(../images/logo.png);
-    background-repeat: no-repeat;
-    background-position: 20px 50%;
+}
+
+
+.logo_hbnb {
+    background: url("../images/logo.png") no-repeat;
+    background-position: left;
+    display: block;
+    height: 100%;
+    margin-left: 20px;
 }
