--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -68,6 +68,7 @@ li {
     list-style-type: none;
     margin-top:10px;
     margin-bottom: 10px;
+    text-align: left;
 }
 .locations:hover .popover,
 .amenities:hover .popover {
