--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,19 +1,19 @@
-.places h1 {
-    text-align: left;
+.places {
+    text-align: center;
+  }
+  .places h1 {
     font-size: 30px;
-}
-
-.places article {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.places article h2 {
+    text-align: left;
+  }
+  article {
     width: 390px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
     padding: 20px;
     margin: 20px;
-    border: 1px solid #FF5A5F;
+    display: inline-block;
+  }
+  article h2 {
     font-size: 30px;
-}
-
+    text-align: center;
+  }
