--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -20,7 +20,7 @@ article h2 {
   margin-top: 5px;
 }
 /* structure within boxed lists of places */
-div.price_by_night {
+.price_by_night {
 color: #FF5A5F;
   border: 4px solid #FF5A5F;
   border-radius: 100%;
@@ -32,14 +32,14 @@ color: #FF5A5F;
   float: right;
   top: -80px;
 }
-div.information {
+.information {
   height: 80px;
   border-top: 1px solid #DDDDDD;
   border-bottom: 1px solid #DDDDDD;
 }
-div.max_guest,
-div.number_rooms,
-div.number_bathrooms {
+.max_guest,
+.number_rooms,
+.number_bathrooms {
   line-height: 140px;
   width: 100px;
   height: 100%;
@@ -56,8 +56,8 @@ div.number_bathrooms {
 .number_bathrooms {
   background-image: url("../images/icon_bath.png");
 }
-div.user,
-div.description {
+.user,
+.description {
   text-align: left;
   margin-bottom: 10px;
   margin-top: 10px;
